{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Gameplay",
            "id": "b27f94c3-7a48-481e-a4db-d1812bc40329",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "a67becc1-e7e1-4c40-a523-1a133ffa993a",
                    "expectedControlType": "Vector2",
                    "processors": "StickDeadzone",
                    "interactions": ""
                },
                {
                    "name": "AttackStd",
                    "type": "Button",
                    "id": "25bd8a32-f6ff-4b6b-b7cb-ad5dc64f0782",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "AttackHeavy",
                    "type": "Button",
                    "id": "f2cecc6d-a69b-4bb9-a599-6f22089573f5",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Maneuver",
                    "type": "Button",
                    "id": "ff53ebcb-5a75-4308-bef4-325c08e9e9e8",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Interact",
                    "type": "Button",
                    "id": "959dd68e-be84-4378-92e6-c0f2daf0d3fb",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "2db0fc3b-815d-43f9-a16e-3e526d39a2f8",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "16275249-edf0-4be1-af05-0865d3d6bd88",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "AttackStd",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9b0465ff-7c05-4eb0-b104-2cbf086d56eb",
                    "path": "<Gamepad>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "AttackHeavy",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2cd00bfa-eb1d-443a-be81-8febe9bcc5b0",
                    "path": "<Gamepad>/buttonNorth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Maneuver",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1f0f316e-09ba-4a03-9d16-3c29910c7a09",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Interact",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}